[package]
name = "icq-sender"
version = "0.1.0"
authors = ["Aleksander Dziki <vojtseh2014@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

#[dependencies]
#cosmwasm-schema = "2.1.4"
#cosmwasm-std = { version = "2.1.4", features = [
#    "cosmwasm_1_4",
#    # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
#     "cosmwasm_2_0",
#    "stargate"
#] }
#cw-storage-plus = "2.0.0"
#cw2 = "2.0.0"
#schemars = "0.8.21"
#serde = { version = "1.0.210", default-features = false, features = ["derive"] }
#thiserror = { version = "1.0.64" }
#bincode = "2.0.0-rc.3"
#
#[dev-dependencies]
#cw-multi-test = "2.1.1"

[dependencies]
cosmwasm-schema = "2.0.2"
cosmwasm-std = { version = "2.0.2", features = [
    "cosmwasm_1_4",
    # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
#    "cosmwasm_2_0",
    "stargate"
] }
cw2 = "2.0.0"
cw-controllers = "2.0.0"
cw-multi-test = "2.0.0"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
schemars = "0.8.15"
semver = "1"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "1.0.4"

[dev-dependencies]
cw-multi-test = "2.0.0"
